; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/svp/extr_compiler.c_tr_r0_to_ST.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/svp/extr_compiler.c_tr_r0_to_ST.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SSP_ST = common dso_local global i32 0, align 4
@hostreg_r = common dso_local global i32* null, align 8
@KRREG_ST = common dso_local global i32 0, align 4
@dirty_regb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @tr_r0_to_ST to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tr_r0_to_ST(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 @EOP_AND_IMM(i32 1, i32 0, i32 0, i32 103)
  %4 = call i32 @EOP_AND_IMM(i32 6, i32 6, i32 4, i32 224)
  %5 = call i32 @EOP_ORR_REG_LSL(i32 6, i32 6, i32 1, i32 4)
  %6 = load i32, i32* @SSP_ST, align 4
  %7 = call i32 @TR_WRITE_R0_TO_REG(i32 %6)
  %8 = load i32*, i32** @hostreg_r, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 1
  store i32 -1, i32* %9, align 4
  %10 = load i32, i32* @KRREG_ST, align 4
  %11 = xor i32 %10, -1
  %12 = load i32, i32* @dirty_regb, align 4
  %13 = and i32 %12, %11
  store i32 %13, i32* @dirty_regb, align 4
  ret void
}

declare dso_local i32 @EOP_AND_IMM(i32, i32, i32, i32) #1

declare dso_local i32 @EOP_ORR_REG_LSL(i32, i32, i32, i32) #1

declare dso_local i32 @TR_WRITE_R0_TO_REG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
